--- a/src/main/resources/public/modules/order/current/currentOrders.view.html
+++ b/src/main/resources/public/modules/order/current/currentOrders.view.html
@@ -16,7 +16,7 @@
                     </div>
                     <div class="media-body tableDetail">
                         <div>Occupancy<span class="label label-success pull-right">{{table.occupancy}}</span></div>
-                        <div>Status<span class="label label-info pull-right">{{table.status}}</span></div>
+                        <div>Status<span class="label label-info pull-right">{{table.order.state}}</span></div>
                         <div>Occupied For<span class="label label-warning pull-right">{{table.tableOccupiedDuration}}</span></div>
                     </div>
                 </div>
