--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -56,5 +56,6 @@
 <script src="modules/buildOrder/trackOrder/track-order-ctrl.js"></script>
 <script src="modules/buildOrder/feedback/feedback-ctrl.js"></script>
 <script src="modules/buildOrder/thankyou/thankyou-ctrl.js"></script>
+<script src="modules/kot/kot-ctrl.js"></script>
 
 </html>
