Resolved PR issues

--- a/src/main/resources/public/modules/kot/kot.view.html
+++ b/src/main/resources/public/modules/kot/kot.view.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="../../assets/css/kotStyle.css">
-<div ng-controller="kotController" ng-cloak>
+<div ng-controller="KOTController" ng-cloak>
     <div class="row">
-        <div class="col-md-12 activeOrdersColumn">
+        <div class="col-md-12 activeOrdersColumn greenColor">
             <div class="row">
                 <div class="col-md-2 col-md-offset-5 text-center">
                     <p class="activeOrders">Active Orders</p>
@@ -25,7 +25,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#1</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -89,7 +89,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#2</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -129,7 +129,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#3</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -181,7 +181,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#4</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -215,7 +215,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#5</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -252,7 +252,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#6</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -307,7 +307,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#7</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -350,7 +350,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#8</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -390,7 +390,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#9</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -451,7 +451,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#10</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -512,7 +512,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#11</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -558,7 +558,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#12</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -604,7 +604,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#13</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -638,7 +638,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#14</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -678,7 +678,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#15</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -715,7 +715,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#16</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -752,7 +752,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#17</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -801,7 +801,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#18</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -850,7 +850,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#19</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -899,7 +899,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#20</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -948,7 +948,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#21</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
@@ -997,7 +997,7 @@
                 <!--wrapper inner starts from here-->
                 <div class="col-md-12 wrapperInner">
                     <div class="row">
-                        <div class="col-xs-12 tableNoTimeColumn">
+                        <div class="col-xs-12 tableNoTimeColumn greyColor">
                             <div class="row tableNoTimeRow">
                                 <div class="col-xs-6">#22</div>
                                 <div class="col-xs-6 text-right">HH:MM</div>
