Added loading bar.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/loading-bar.min.css">
 </head>
 
 <body ng-controller="MainController">
@@ -32,6 +33,7 @@
 <script src="assets/vendor/ui-bootstrap-tpls.js"></script>
 <script src="assets/vendor/angular-sanitize.min.js"></script>
 <script src="assets/vendor/angucomplete-alt.js"></script>
+<script src="assets/vendor/loading-bar.min.js"></script>
 
 <script src="assets/vendor/ui-select/select.js"></script>
 <script src="modules/cart/cart-service.js"></script>
